--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -111,7 +111,7 @@
 }
 
 .main-content {
-  min-height: 800px;
+  min-height: 500px;
   background: #fefefe;
   padding: 30px 20px;
   border-right: solid 1px #dcdcdc;
@@ -151,7 +151,7 @@
   display: block;
 }
 
-.froms-list {
+.forms-list {
   margin-top: 30px;
 }
 
