--- a/client/components/sidebar/sidebar.html
+++ b/client/components/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-lg-2 col-sm-2 sidebar-wrap" ng-controller="NavbarController">
   <div class="sidebar">
       <div class="sidebar-logo">
-        <a href="/froms"><img src="assets/images/green-logo.svg" alt=""></a>
+        <a href="/forms"><img src="assets/images/green-logo.svg" alt=""></a>
       </div>
     <br>
     <ul class="sb-nav">
