--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <a href="/froms" class="navbar-brand green-brand"><img class="img-responsive" src="assets/images/green-logo.svg" alt=""></a>
+      <a href="/forms" class="navbar-brand green-brand"><img class="img-responsive" src="assets/images/green-logo.svg" alt=""></a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
