Fixing the graph

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -319,11 +319,11 @@
 }
 
 .certf-text {
-  color: #dcb457;
   font-weight: 700;
   text-transform: uppercase;
   margin: 5px 0;
   font-size: 20px;
+  display: inline;
 }
 
 .popover-close {
